--- a/SCE/SCE/nbproject/project.properties
+++ b/SCE/SCE/nbproject/project.properties
@@ -36,16 +36,23 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.commons-beanutils-1.8.2.jar=build/web/WEB-INF/lib/commons-beanutils-1.8.2.jar
+file.reference.commons-beanutils-1.8.2.jar-1=lib/commons-beanutils-1.8.2.jar
 file.reference.commons-collections-3.2.1.jar=build/web/WEB-INF/lib/commons-collections-3.2.1.jar
+file.reference.commons-collections-3.2.1.jar-1=lib/commons-collections-3.2.1.jar
 file.reference.commons-digester-2.1.jar=build/web/WEB-INF/lib/commons-digester-2.1.jar
+file.reference.commons-digester-2.1.jar-1=lib/commons-digester-2.1.jar
 file.reference.commons-javaflow-20060411.jar=build/web/WEB-INF/lib/commons-javaflow-20060411.jar
+file.reference.commons-javaflow-20060411.jar-1=lib/commons-javaflow-20060411.jar
 file.reference.commons-logging-1.1.jar=build/web/WEB-INF/lib/commons-logging-1.1.jar
+file.reference.commons-logging-1.1.jar-1=lib/commons-logging-1.1.jar
 file.reference.iText-2.1.7.jar=build/web/WEB-INF/lib/iText-2.1.7.jar
+file.reference.iText-2.1.7.jar-1=lib/iText-2.1.7.jar
 file.reference.jasperreports-5.0.4.jar=build/web/WEB-INF/lib/jasperreports-5.0.4.jar
+file.reference.jasperreports-5.0.4.jar-1=lib/jasperreports-5.0.4.jar
 file.reference.jstl-api.jar=build/web/WEB-INF/lib/jstl-api.jar
 file.reference.jstl-impl.jar=build/web/WEB-INF/lib/jstl-impl.jar
 file.reference.mysql-connector-java-3.1.13-bin.jar=build/web/WEB-INF/lib/mysql-connector-java-3.1.13-bin.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar=build/web/WEB-INF/lib/mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-java-5.0.4-bin.jar=lib/mysql-connector-java-5.0.4-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -60,14 +67,21 @@ javac.classpath=\
     ${file.reference.commons-collections-3.2.1.jar}:\
     ${file.reference.commons-digester-2.1.jar}:\
     ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar-1}:\
+    ${file.reference.commons-collections-3.2.1.jar-1}:\
+    ${file.reference.commons-digester-2.1.jar-1}:\
+    ${file.reference.commons-javaflow-20060411.jar-1}:\
+    ${file.reference.commons-logging-1.1.jar-1}:\
+    ${file.reference.iText-2.1.7.jar-1}:\
+    ${file.reference.jasperreports-5.0.4.jar-1}:\
     ${file.reference.commons-logging-1.1.jar}:\
     ${file.reference.iText-2.1.7.jar}:\
     ${file.reference.jasperreports-5.0.4.jar}:\
     ${file.reference.jstl-api.jar}:\
     ${file.reference.jstl-impl.jar}:\
     ${file.reference.mysql-connector-java-3.1.13-bin.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.mysql-connector-java-5.0.4-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
